force-app/main/default/objects/Veiculo__c/Veiculo__c.object-meta.xml
<CustomObject>
    <label>Veiculo</label>
    <nameField>
        <label>Chassi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veiculos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>