force-app/main/default/objects/Veiculo__c/fields/Combustivel__c.field-meta.xml
<CustomField>
    <fullName>Combustivel__c</fullName>
    <label>Combustível</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eletrico__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasolina</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gás Natural</fullName>
            </value>
            <value>
                <fullName>Querosene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>