force-app/main/default/objects/Veiculo__c/fields/Data_do_Emplacamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Emplacamento__c</fullName>
    <label>Data do Emplacamento</label>
    <type>Date</type>
</CustomField>