force-app/main/default/objects/Veiculo__c/fields/Eletrico__c.field-meta.xml
<CustomField>
    <fullName>Eletrico__c</fullName>
    <label>Elétrico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sim_ou_Nao</valueSetName>
    </valueSet>
</CustomField>