force-app/main/default/objects/Veiculo__c/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <label>Proprietário</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Veiculos</relationshipLabel>
    <relationshipName>Veiculos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>