force-app/main/default/objects/Veiculo__c/fields/Telefone_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Telefone_do_Cliente__c</fullName>
    <label>Telefone do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>