force-app/main/default/objects/Veiculo__c/fields/Valor_do_Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Veiculo__c</fullName>
    <label>Valor do Veículo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>