force-app/main/default/objects/Veiculo__c/fields/Vencimento_do_Emplacamento__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_do_Emplacamento__c</fullName>
    <formula>ADDMONTHS(Data_do_Emplacamento__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimento do Emplacamento</label>
    <type>Date</type>
</CustomField>