force-app/main/default/objects/Veiculo__c/recordTypes/Aereo.recordType-meta.xml
<RecordType>
    <fullName>Aereo</fullName>
    <active>true</active>
    <label>Aéreo</label>
</RecordType>