force-app/main/default/objects/Veiculo__c/recordTypes/Terrestre.recordType-meta.xml
<RecordType>
    <fullName>Terrestre</fullName>
    <active>true</active>
    <label>Terrestre</label>
</RecordType>