force-app/main/default/objects/Veiculo__c/validationRules/Verifica_Tamanho_do_Numero_de_Chassi_Ele.validationRule-meta.xml
<ValidationRule>
    <fullName>Verifica_Tamanho_do_Numero_de_Chassi_Ele</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Eletrico__c, &apos;Sim&apos;), LEN(Name) != 10)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Carros elétricos precisam de um número de chassi com 10 caracteres.</errorMessage>
</ValidationRule>