force-app/main/default/objects/Veiculo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proprietario__c</columns>
    <columns>Data_do_Emplacamento__c</columns>
    <columns>Vencimento_do_Emplacamento__c</columns>
    <columns>Valor_do_Veiculo__c</columns>
    <columns>Eletrico__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Combustivel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>